2006-11-24  Ville Vainio  <vivainio@gmail.com>

	* Magic.py, manual_base.lyx: Kirill Smelkov patch: 
	try to use "cProfile" instead of the slower pure python
	"profile"

2006-11-23  Ville Vainio  <vivainio@gmail.com>

	* manual_base.lyx: Kirill Smelkov patch: Fix wrong 
	Qt+IPython+Designer link in documentation.
	
	* Extensions/ipy_pydb.py: R. Bernstein's patch for passing 
	correct Pdb object to %pydb.


2006-11-22  Walter Doerwald  <walter@livinglogic.de>
	* IPython/Extensions/astyle.py: Text needs it's own implemenation of the
	generic xrepr(), otherwise the list implementation would kick in.

2006-11-21  Ville Vainio  <vivainio@gmail.com>

	* upgrade_dir.py: Now actually overwrites a nonmodified user file
	with one from UserConfig.
	
	* ipy_profile_sh.py: Add dummy "depth" to var_expand lambda, 
	it was missing which broke the sh profile.
	
	* completer.py: file completer now uses explicit '/' instead
	of os.path.join, expansion of 'foo' was broken on win32 
	if there was one directory with name 'foobar'. 

	* A bunch of patches from Kirill Smelkov:
	
	* [patch 9/9] doc: point bug-tracker URL to IPythons trac-tickets.

	* [patch 7/9] Implement %page -r (page in raw mode) - 

	* [patch 5/9] ScientificPython webpage has moved

	* [patch 4/9] The manual mentions %ds, should be %dhist

	* [patch 3/9] Kill old bits from %prun doc.

	* [patch 1/9] Fix typos here and there.

2006-11-08  Ville Vainio  <vivainio@gmail.com>

	* completer.py (attr_matches): catch all exceptions raised 
	by eval of expr with dots.

2006-11-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (runsource): Prepend an 'if 1:' to the user
	input if it starts with whitespace.  This allows you to paste
	indented input from any editor without manually having to type in
	the 'if 1:', which is convenient when working interactively.
	Slightly modifed version of a patch by Bo Peng
	<bpeng-AT-rice.edu>.

2006-11-03  Fernando Perez  <Fernando.Perez@colorado.edu>
